--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ bcrypt = "4.0.1"
 fastapi-mail = "^1.4.1"
 python-dotenv = "^1.0.1"
 pyjwt = "^2.9.0"
+python-multipart = "^0.0.12"
 
 
 [build-system]
